# determs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  SPONSORS.md  SUPPORT.md
.github/: FUNDING.yml
docs/: roadmap.md
docs/spec/: evidence-pack-v0.md  registry-index-v0.md  verifiable-decision-record-v0.md
docs/spec/test-vectors/: ai.agent.action-v0.json
examples/: agent_action_example.json
examples/python_demo/: demo_anchor.py  demo_anthropic.py  demo_evidence_pack.py  demo_streaming.py
sdk/python/: README.md  pyproject.toml
sdk/python/determs/: __init__.py  _capture.py  anchor.py  anthropic.py  compliance.py  openai.py  record.py  registry.py  storage.py
sdk/python/tests/: test_anchor.py  test_anthropic_streaming.py  test_anthropic_wrapper.py  test_cli_compatibility.py  test_compliance.py  test_openai_streaming.py  test_openai_wrapper.py  test_record.py  test_registry.py  test_storage.py
src/: capsule.rs  engine.rs  hash.rs  json.rs  lib.rs  main.rs  value.rs  vdr.rs
src/profiles/: agent_replay.rs  mod.rs
web/: astro.config.mjs  package-lock.json  package.json
web/public/: llms.txt  robots.txt  sitemap.xml
web/public/registry/: index.jsonl
web/src/layouts/: BaseLayout.astro
web/src/pages/: index.astro  privacy.astro
web/src/pages/blog/: agent-governance-needs-proof.astro  eu-ai-act-article-12-logging.astro  eu-ai-act-verifiable-logs.astro  index.astro  logs-are-not-proofs.astro  observability-is-not-proof.astro  tamper-evident-is-not-tamper-proof.astro
web/src/styles/: global.css
